[package]
name = "fred-macros"
edition = "2021"
authors = ["Alec Embke <aembke@gmail.com>"]
description = "Procedural macros for the `fred` Redis client"
homepage = "https://github.com/aembke/fred-macros"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aembke/fred-macros"
version = "0.1.0"
exclude = ["bin"]

[lib]
proc-macro = true
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1"

[features]
default = []
enabled = []